examples/code/front-end/camlp4_toplevel.topscript
#silent true;;
#use "topfind";;
#thread;;
#require "core";;
#require "core.top";;
#require "ppx_jane";;
#silent false;;
[@@@part "0.5"];;
#use "topfind" ;;
#camlp4o ;;
[@@@part "1"];;
#require "comparelib.syntax" ;;
type t = { foo: string; bar : t } ;;
[%%expect ocaml {|type t = { foo : string; bar : t; }|}];;
type t = { foo: string; bar: t } [@@deriving compare] ;;
[%%expect{|
Characters 16-22:
Error: Unbound value compare_string
|}];;
